Initial 2xx pages outline

--- a/nav.html
+++ b/nav.html
@@ -6,6 +6,7 @@
 			<ul>
 				<li><a href="#">First Topic</a></li>
 			</ul>
+			<span class="arrow">&#43;</span>
 			</li>
 			<li><a href="/dyn/ref.html" id="navDynRef">Dynamics References</a>
 			<!-- First Tier Drop Down -->
@@ -100,27 +101,37 @@
 					<li><a href="#">Course Material</a>
 				<!-- Second Tier Drop Down -->
 						<ul>
-							<li><a href="/sol/stress.html">Stress</a></li>
-							<li><a href="/sol/strain.html">Strain</a></li>
-							<li><a href="/sol/material.html">Material Properties</a></li>
-							<li><a href="/sol/axial.html" id="navRef">Axial Deformation</a></li>
-							<li><a href="/sol/torsion.html" id="navRef">Torsion</a></li>
-							<li><a href="/sol/bending.html" id="navRef">Bending</a></li>
-							<li><a href="/sol/transverse.html" id="navRef">Transverse Shear</a></li>
-							<li><a href="/sol/pressure.html" id="navRef">Pressure Vessels</a></li>
-							<li><a href="/sol/combined.html" id="navRef">Combined Loading</a></li>
-							<li><a href="/sol/transformation.html" id="navRef">Stress Transformation</a></li>
-							<li><a href="/sol/deflection.html" id="navRef">Deflection</a></li>
-							<li><a href="/sol/buckling.html" id="navRef">Buckling</a></li>
+							<li><a href="/sol/stress.html" id="navSolRef">Stress</a></li>
+							<li><a href="/sol/strain.html" id="navSolRef">Strain</a></li>
+							<li><a href="/sol/material.html" id="navSolRef">Material Properties</a></li>
+							<li><a href="/sol/axial.html" id="navSolRef">Axial Deformation</a></li>
+							<li><a href="/sol/torsion.html" id="navSolRef">Torsion</a></li>
+							<li><a href="/sol/bending.html" id="navSolRef">Bending</a></li>
+							<li><a href="/sol/transverse.html" id="navSolRef">Transverse Shear</a></li>
+							<li><a href="/sol/pressure.html" id="navSolRef">Pressure Vessels</a></li>
+							<li><a href="/sol/combined.html" id="navSolRef">Combined Loading</a></li>
+							<li><a href="/sol/transformation.html" id="navSolRef">Stress Transformation</a></li>
+							<li><a href="/sol/deflection.html" id="navSolRef">Deflection</a></li>
+							<li><a href="/sol/buckling.html" id="navSolRef">Buckling</a></li>
 						</ul>
 						<span class="arrow">&#8250;</span>
 					</li>
 					<li><a href="#">Other References</a>
 						<ul>
-							<li><a href="/sol/signConvention.html" id="navRef">Sign Convention</a></li>
+							<li><a href="/sol/signConvention.html" id="navSolRef">Sign Convention</a></li>
+							<li><a href="/sol/FormulaSheet.pdf" id="navSolRef">Formula Sheet</a></li>
 						</ul>
 						<span class="arrow">&#8250;</span>
 					</li>
+				</ul>
+				<span class="arrow">&#43;</span>
+			</li>
+			<li><a href="/pol/index.html" id="navPolIdx">TAM 2XX</a>
+				<!-- First tier drop down-->
+				<ul>
+					<li><a href="/pol/policies.html">2XX Policies</a></li>
+					<li><a href="/pol/siip.html">SIIP Committee</a></li>
+					<li><a href="/pol/pltips.html">PrarieLearn Tips</a></li>
 				</ul>
 				<span class="arrow">&#43;</span>
 			</li>
