--- a/sol/ref.html
+++ b/sol/ref.html
@@ -46,6 +46,7 @@
 
 					<ul>
 						<li><a href="signConvention.html">Sign Convention</a></li>
+						<li><a href="FormulaSheet.pdf">Formula Sheet</a></li>
 					</ul>
 
 				</div>
