--- a/pol/index.html
+++ b/pol/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
-	<link href="favicon2.png?" rel="icon" type="image/png" /><meta charset="UTF-8">
-	<title>Policies</title>
-	<link href="/style.css" rel="stylesheet" type="text/css" />
-	<link href="/icomoon.css" rel="stylesheet" type="text/css" /><!-- <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script> --><!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> --><script type="text/x-mathjax-config;executed=true">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script><script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script><script src="js/jquery-1.7.2.min.js" type="text/javascript"></script><script src="js/pageControl.js" type="text/javascript"></script><script src="js/sylvester.js" type="text/javascript"></script><script src="js/sha1.js" type="text/javascript"></script><script src="js/PrairieDraw.js" type="text/javascript"></script><script type="text/javascript">
-	var _gaq = _gaq || [];
-	_gaq.push(['_setAccount', 'UA-37625161-1']);
-	_gaq.push(['_trackPageview']);
-
-	(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	})();
-	</script>
+	<link rel="icon" type="image/png" href="../../favicon2.png">
+	<meta charset="UTF-8">
+	<title>TAM 2XX</title>
+	<link href="/style.css" type="text/css" rel="stylesheet" />
+	<link href="/icomoon.css" type="text/css" rel="stylesheet" />
+	
+	<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+	<!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+	<!-- <script type="text/x-mathjax-config;executed=true">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script> -->
+	<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+	<script src="../../js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script src="../../js/pageControl.js" type="text/javascript"></script>
+	<script src="../../js/sylvester.js" type="text/javascript"></script>
+	<script src="../../js/sha1.js" type="text/javascript"></script>
+	<script src="../../js/PrairieDraw.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
 <div id="nav-placeholder"></div>
 		<script>
 			$(function(){
-				$("#nav-placeholder").load("/nav.html");
+				$("#nav-placeholder").load("../../nav.html");
 			});
 		</script>
 
