--- a/pol/pltips.html
+++ b/pol/pltips.html
@@ -1,36 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head profile="http://www.w3.org/2005/10/profile">
-	<link href="TAM2xx.png" rel="icon" type="image/png" /><meta charset="UTF-8">
-	<title>PL Tips</title>
-	<link href="../style.css" rel="stylesheet" type="text/css" />
-	<link href="../icomoon.css" rel="stylesheet" type="text/css" />
+	<head profile="http://www.w3.org/2005/10/profile">
+		<link rel="icon" type="image/png" href="../../favicon2.png">
+		<meta charset="UTF-8">
+		<title>PL Tips</title>
+		<link href="/style.css" type="text/css" rel="stylesheet" />
+		<link href="/icomoon.css" type="text/css" rel="stylesheet" />
+		
+		<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+		<!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+		<!-- <script type="text/x-mathjax-config;executed=true">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script> -->
+		<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+		<script src="../../js/jquery-1.7.2.min.js" type="text/javascript"></script>
+		<script src="../../js/pageControl.js" type="text/javascript"></script>
+		<script src="../../js/sylvester.js" type="text/javascript"></script>
+		<script src="../../js/sha1.js" type="text/javascript"></script>
+		<script src="../../js/PrairieDraw.js" type="text/javascript"></script>
+	</head>
 
-	<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-	<!-- The MathJAX below doesn't work...not sure why but it is not loading equations in line... -->
-	<!-- <script type="text/x-mathjax-config;executed=true">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script> -->
-	<!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-
-	<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-	<script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
-	<script src="js/pageControl.js" type="text/javascript"></script>
-	<script src="js/sylvester.js" type="text/javascript"></script>
-	<script src="js/sha1.js" type="text/javascript"></script>
-	<script src="js/PrairieDraw.js" type="text/javascript"></script>
-	<script type="text/javascript">
-
-	var _gaq = _gaq || [];
-	_gaq.push(['_setAccount', 'UA-37625161-1']);
-	_gaq.push(['_trackPageview']);
-
-	(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	})();
-
-</script>
-</head>
 <body>
 	<div class="container">
 		<div class="header">
