Added missing template pages for policies, updated nav and policy index pages

--- a/nav.html
+++ b/nav.html
@@ -131,7 +131,19 @@
 				<ul>
 					<li><a href="/pol/policies.html">2XX Policies</a></li>
 					<li><a href="/pol/siip.html">SIIP Committee</a></li>
-					<li><a href="/pol/pltips.html">PrarieLearn Tips</a></li>
+					<li><a href="/pol/collab.html">Collaborative Learning</a></li>
+					<li><a href="/pol/faq.html">FAQ</a></li>
+					<li><a href="/pol/pltips.html">PrarieLearn Tips</a>
+						<!-- Second Tier Drop Down -->
+						<ul>
+							<li><a href="/pol/matlab.html">Matlab Introduction</a></li>
+							<li><a href="/pol/mathematica.html">Mathematica Introduction</a></li>
+							<li><a href="/pol/python.html">Python Introduction</a></li>
+							<li><a target="_blank" href="https://recordings.engineering.illinois.edu:8443/ess/echo/presentation/0407790e-4633-47b9-8957-eedde1d1695f" style="color: rgb(108, 113, 196);">PrairieLearn and Mathematica Tutorial</a>(External)</li>
+							<li><a target="_blank" href="https://recordings.engineering.illinois.edu:8443/ess/echo/presentation/2bf67842-133f-4595-bb6a-76bdbbbe2016" style="color: rgb(108, 113, 196);">Mathematica Tutorial</a>(External)</li>
+						</ul>
+						<span class="arrow">&#8250;</span>
+					</li>
 				</ul>
 				<span class="arrow">&#43;</span>
 			</li>
