--- a/pol/index.html
+++ b/pol/index.html
@@ -33,17 +33,26 @@
 <div class="mainPage">
 <div class="mainContent">
 
-<p><strong>Computer Based Testing Resources:</strong></p>
+<p>The following pages include information and resources relevant to all TAM 2XX courses at the University of Illinois at Urbana Champaign.</p>
 
+<p><strong>Information:</strong></p>
 <ul>
-	<li><a href="../pltips.html">PrairieLearn Tips</a></li>
+	<li><a href="policies.html">2XX Policies</a></li>
+	<li><a href="siip.html">SIIP Committee</a></li>
+	<li><a href="collab.html">Collaborative and Active Learning</a></li>
+	<li><a href="faq.html">FAQ</a></li>
 </ul>
 
+<p><strong>Resources:</strong></p>
 <ul>
-	<li><a href="MATLAB Introduction.pdf">Matlab Introduction</a></li>
-	<li><a href="MatlabLecture.flv">Matlab Video Lecture</a></li>
-	<li><a href="https://recordings.engineering.illinois.edu:8443/ess/echo/presentation/0407790e-4633-47b9-8957-eedde1d1695f" style="color: rgb(108, 113, 196);">PrairieLearn and Mathematica Tutorial</a>&nbsp;by Prof. Silva from TAM 251</li>
-	<li><a href="https://recordings.engineering.illinois.edu:8443/ess/echo/presentation/2bf67842-133f-4595-bb6a-76bdbbbe2016" style="color: rgb(108, 113, 196);">Mathematica Tutorial</a>&nbsp;by Prof. Silva</li>
+	<li><a href="pltips.html">PrairieLearn Tips</a></li>
+	<ul>
+		<li><a href="matlab.html">Matlab Introduction</a></li>
+		<li><a href="mathematica.html">Mathematica Introduction</a></li>
+		<li><a href="python.html">Python Introduction</a></li>
+		<li><a target="_blank" href="https://recordings.engineering.illinois.edu:8443/ess/echo/presentation/0407790e-4633-47b9-8957-eedde1d1695f" style="color: rgb(108, 113, 196);">PrairieLearn and Mathematica Tutorial</a>&nbsp;by Prof. Silva from TAM 251</li>
+		<li><a target="_blank" href="https://recordings.engineering.illinois.edu:8443/ess/echo/presentation/2bf67842-133f-4595-bb6a-76bdbbbe2016" style="color: rgb(108, 113, 196);">Mathematica Tutorial</a>&nbsp;by Prof. Silva</li>
+	</ul>
 </ul>
 </div>
 </div>
