--- a/pol/policies.html
+++ b/pol/policies.html
@@ -32,7 +32,9 @@
 <div class="mainBlock">
 <div class="contentBlock">
 <div class="contentCol">
-<p>Below are the course policies for this class. Please read through them and familiarize yourself with the policies regarding course logistics. Details specific to course content can be found on the <a href="info.html">Info</a> page.</p>
+<p>Details specific to course content can be found on the respective info pages: <a href="https://courses.engr.illinois.edu/tam210/info.html">TAM 210/211</a>, <a href="https://courses.engr.illinois.edu/tam212/info.html">TAM 212</a>, <a href="https://courses.engr.illinois.edu/tam251/info.html">TAM 251</a>.</p>
+
+<p>Below are the course policies for the TAM 2XX courses. Please read through them and familiarize yourself with the policies regarding course logistics.</p>
 
 <p><a href="#Academic integrity">Academic integrity, harassment, and discrimination</a><br />
 <a href="#CBTF">Computer-Based Testing Facility</a><br />
@@ -51,6 +53,7 @@
 
 <p>Computer-based testing deserves special mention. This testing is typically given across multiple days. <strong>During the entire time period of testing, students are strictly forbidden from discussing any aspect of the test/quiz whatsoever with other students.</strong> This includes specifics of questions, general aspects of questions, comments on the difficulty of the quiz, etc. This policy is strictly enforced to preserve the integrity of the computer-based testing.</p>
 
+
 <h3><a id="CBTF" name=""><strong>Computer-Based Testing Facility:</strong></a></h3>
 
 <p>This course uses the College of Engineering Computer-Based Testing Facility (CBTF) for its quizzes and exams: <a href="https://cbtf.engr.illinois.edu/"> https://cbtf.engr.illinois.edu</a>.</p>
@@ -61,17 +64,21 @@
 
 <p>Any problem with testing in the CBTF <strong>must</strong> be reported to CBTF staff at the time the problem occurs. If you do not inform a proctor of a problem during the test then you <strong>forfeit</strong> all rights to redress.</p>
 
+
 <h3><a id="Contact" name="Contact"><strong>Contact and obtaining help:</strong></a></h3>
 
 <p>The two main ways to obtain help are online at Piazza, or in person at the Grainger office hours. You can also speak with your professor briefly after lecture. Please do not send email directly to CAs, TAs or professors for routine help or absences. &nbsp;</p>
+
 
 <h3><strong><a id="Gradebook" name="Gradebook">Gradebook</a>:</strong></h3>
 
 <p>All assessment scores are stored on Compass2g. Note that we are only using this website for grade reporting. All other class-related information will be posted only to the official class website or Piazza. Any errors in grade reporting appearing on Compass2g must be reported to &quot;Instructors&quot; via Piazza within 2 weeks of the due date of the assessment item or by the last day of class, whichever is earlier.</p>
 
+
 <h3><a id="Lectures" name="Lectures"><strong>Lectures:</strong></a></h3>
 
 <p>Prompt and regular attendance at lectures is essential for your comprehension and success in the course.</p>
+
 
 <h3><strong><a id="Special accommodations" name="Special accommodations"> Special accommodations</a>:</strong></h3>
 
