--- a/sol/ref.html
+++ b/sol/ref.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
-	<link href="favicon2.png?" rel="icon" type="image/png" /><meta charset="UTF-8">
+	<link href="favicon2.png?" rel="icon" type="image/png" />
+	<meta charset="UTF-8">
 	<title>Solid Mechanics</title>
 
 	<link href="/style.css" rel="stylesheet" type="text/css" />
 	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+	<script src="../../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+
+	<script>
+			$(function(){
+				$("#nav-placeholder").load("../../nav.html");
+			});
+		</script>
 </head>
 
 <body>
 	<div class="container">
 		<div class="header">
-			<h1>TAM 251: Introductory Solid Mechanics</h1>
+			<h1>Introductory Solid Mechanics</h1>
 		</div>
-
 		<div id="nav-placeholder"></div>
-		<script>
-			$(function(){
-				$("#nav-placeholder").load("/nav.html");
-			});
-		</script>
 
 		<div class="mainBlock">
 			<div class="mainPage">
