--- a/sol/torsion.html
+++ b/sol/torsion.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
-	<link href="../../favicon2.png" rel="icon" type="image/png" /><meta charset="UTF-8">
+	<link rel="icon" type="image/png" href="favicon2.png">
+	<meta charset="UTF-8">
 	<title>Torsion</title>
-	<link href="/style.css" rel="stylesheet" type="text/css" />
-	<link href="/icomoon.css" rel="stylesheet" type="text/css" />
+
+	<link href="../../style.css" type="text/css" rel="stylesheet" />
+	<link href="../../icomoon.css" type="text/css" rel="stylesheet" />
 
 	<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-	<!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-	<!-- <script type="text/x-mathjax-config;executed=true">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script> -->
-	<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-	<script src="../../js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script src="../../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type="text/javascript" </script>
+
+	<script src="../../js/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/pageControl.js" type="text/javascript"></script>
 	<script src="../../js/sylvester.js" type="text/javascript"></script>
 	<script src="../../js/sha1.js" type="text/javascript"></script>
 	<script src="../../js/PrairieDraw.js" type="text/javascript"></script>
+
+	<script>
+		$(function(){
+		$("#nav-placeholder").load("../../nav.html");
+		});
+	</script>
 </head>
 
 <body>
 	<div class="container">
-		<div class="header">
-			<h1>TAM 251: Introductory Solid Mechanics</h1>
-		</div>
-
+		<div class="header"><h1>Introductory Solid Mechanics</h1></div>
 		<div id="nav-placeholder"></div>
-		<script>
-			$(function(){
-				$("#nav-placeholder").load("/nav.html");
-			});
-		</script>
 
-		<div class="mainBlock"><!--<p><a href="../../dev.html" id="navSched">Back to Development Page</a></p>-->
-
-			<p style="text-align:left;">Previous Page: <a href="../unit2/axial.html" id="navSched">Axial</a>
-				<span style="float:right;">Next Page: <a href="../unit4/bending.html" id="navSched">Bending</a></span></p>
-
+		<div class="mainBlock">
 				<div class="contentBlock">
 					<table border="0" cellpadding="1" cellspacing="1" style="width:600px">
 						<thead>
@@ -249,12 +244,6 @@
 						</div>
 
 					</div>
-				</div>
-			</div>
-
-			<div class="contentBlock">
-				<p style="text-align:left;">Previous Page: <a href="../unit2/axial.html" id="navSched">Axial</a>
-					<span style="float:right;">Next Page: <a href="../unit4/bending.html" id="navSched">Bending</a></span></p>
 				</div>
 			</div>
 		</body>
