--- a/sol/transformation.html
+++ b/sol/transformation.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html> 
 <head profile="http://www.w3.org/2005/10/profile">
-  <link rel="icon" type="image/png" href="../../favicon2.png">
+  <link rel="icon" type="image/png" href="favicon2.png">
   <meta charset="UTF-8">
-  <title>StressTransformation</title>
-  <link href="/style.css" type="text/css" rel="stylesheet" />
-  <link href="/icomoon.css" type="text/css" rel="stylesheet" />
+  <title>Stress Transformation</title>
+
+  <link href="../../style.css" type="text/css" rel="stylesheet" />
+  <link href="../../icomoon.css" type="text/css" rel="stylesheet" />
 
   <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-  <!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-  <!-- <script type="text/x-mathjax-config;executed=true">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script> -->
-  <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-  <script src="../../js/jquery-2.1.4.min.js"></script>
+  <script src="../../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type="text/javascript" </script>
+
+  <script src="../../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="../../js/pageControl.js" type="text/javascript"></script>
+  <script src="../../js/sylvester.js" type="text/javascript"></script>
+  <script src="../../js/sha1.js" type="text/javascript"></script>
+  <script src="../../js/PrairieDraw.js" type="text/javascript"></script>
+
+  <script>
+    $(function(){
+    $("#nav-placeholder").load("../../nav.html");
+    });
+  </script>
+
+  <!-- Scripts for this page only: -->
   <script src="../../js/underscore-min.js"></script>
   <script src="../../js/backbone-min.js"></script>
   <script src="../../js/rivets.bundled.min.js"></script>
-  <script src="../../js/pageControl.js" type="text/javascript"></script>
-  <script src="../../js/sylvester.js" type="text/javascript"></script>
   <script src="../../js/numeric-1.2.6.min.js"></script>
-  <script src="../../js/sha1.js" type="text/javascript"></script>
   <script src="../../js/PrairieGeom.js"></script>
-  <script src="../../js/PrairieDraw.js" type="text/javascript"></script>
-
   <script src="stateOfStress.js" type="text/javascript"></script>
   <script src="beam.js" type="text/javascript"></script>
 </head>
 
 <body>
   <div class="container">
-    <div class="header"><h1>TAM 251: Introductory Solid Mechanics</h1></div>
-
+    <div class="header"><h1>Introductory Solid Mechanics</h1></div>
     <div id="nav-placeholder"></div>
-		<script>
-			$(function(){
-				$("#nav-placeholder").load("/nav.html");
-			});
-		</script>
 
     <div class="mainBlock">
-      <p style="text-align:left;">Previous Page: <a href="../unit6/combined.html" id="navSched">Combined Loading</a>
-        <span style="float:right;">Next Page: <a href="../unit7/deflection.html" id="navSched">Deflection of Beams</a></span></p>
-
         <div class="contentBlock">
           <table border="0" cellpadding="0" cellspacing="0" style="width:600px">
             <thead>
@@ -467,14 +465,6 @@
                       </div>
 
                     </div>
-
-                    <div class="contentBlock">
-                      <p style="text-align:left;">Previous Page: <a href="../unit6/combined.html" id="navSched">Combined Loading</a>
-                        <span style="float:right;">Next Page: <a href="../unit7/deflection.html" id="navSched">Deflection of Beams</a></span>
-                      </p>
-                    </div>
-
-
                   </div>
                 </div>
 
