--- a/dyn/afp.html
+++ b/dyn/afp.html
@@ -6,11 +6,11 @@
     <title>
       Projectiles with air resistance
     </title>
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <link href="icomoon.css" type="text/css" rel="stylesheet" />
+    <link href="../style.css" type="text/css" rel="stylesheet" />
+    <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type="text/javascript" </script>
     <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
     <script src="sylvester.js" type="text/javascript"></script>
     <script src="sha1.js" type="text/javascript"></script>
@@ -18,29 +18,30 @@
     <script src="PrairieGeom.js" type="text/javascript"></script>
     <script src="PrairieDrawNew.js" type="text/javascript"></script>
     <script src="pageControl.js" type="text/javascript"></script>
-<script type="text/javascript">
+    
+    <script>
+      $(function(){
+        $("#nav-placeholder").load("../nav.html");
+      });
+    </script>
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-37625161-1']);
-  _gaq.push(['_trackPageview']);
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-37625161-1']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
     <div class="container">
       <div class="header"><h1>Dynamics</h1></div>
       <div id="nav-placeholder"></div>
-	    <script>
-        $(function(){
-          $("#nav-placeholder").load("/nav.html");
-        });
-      </script>
+      
       <div class="mainBlock">
     <div class="contentBlock">
       <div id="afp" class="section level2 contentCol">
