--- a/dyn/ai.html
+++ b/dyn/ai.html
@@ -3,11 +3,8 @@
   <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="UTF-8">
-    <title>
-      Ideas
-    </title>
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <link href="icomoon.css" type="text/css" rel="stylesheet" />
+    <link href="../style.css" type="text/css" rel="stylesheet" />
+    <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -16,29 +13,32 @@
     <script src="sha1.js" type="text/javascript"></script>
     <script src="PrairieDraw.js" type="text/javascript"></script>
     <script src="pageControl.js" type="text/javascript"></script>
-<script type="text/javascript">
+    <script>
+      $(function(){
+        $("#nav-placeholder").load("../nav.html");
+      });
+    </script>
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-37625161-1']);
-  _gaq.push(['_trackPageview']);
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-37625161-1']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+    
+    <title>Ideas</title>
   </head>
+
   <body>
     <div class="container">
       <div class="header"><h1>Dynamics</h1></div>
       <div id="nav-placeholder"></div>
-	    <script>
-        $(function(){
-          $("#nav-placeholder").load("/nav.html");
-        });
-      </script>
+      
       <div class="mainBlock">
     <div class="contentBlock">
       <div id="ai" class="section level2 contentCol">
