--- a/dyn/index.html
+++ b/dyn/index.html
@@ -3,22 +3,17 @@
   <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="UTF-8">
-    <title>
-      Dynamics
-    </title>
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <!-- <link href="icomoon.css" type="text/css" rel="stylesheet" />
+    <link href="../style.css" type="text/css" rel="stylesheet" />
+    
+    <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
 
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-    <!-- <script src="jquery-1.7.2.min.js" type="text/javascript"></script> -->
-    <script  type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- <script src="sylvester.js" type="text/javascript"></script>
-    <script src="sha1.js" type="text/javascript"></script>
-    <script src="PrairieDraw.js" type="text/javascript"></script>
-    <script src="pageControl.js" type="text/javascript"></script> -->
+    <script>
+      $(function(){
+        $("#nav-placeholder").load("../nav.html");
+      });
+    </script>
+
     <script type="text/javascript">
-
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-37625161-1']);
       _gaq.push(['_trackPageview']);
@@ -29,17 +24,14 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+
+    <title>Dynamics</title>
   </head>
   
   <body>
     <div class="container">
       <div class="header"><h1>Dynamics</h1></div>
       <div id="nav-placeholder"></div>
-	    <script>
-        $(function(){
-          $("#nav-placeholder").load("/nav.html");
-        });
-      </script>
 
       <div class="mainBlock">
     <div class="mainPage">
