--- a/dyn/ref.html
+++ b/dyn/ref.html
@@ -3,7 +3,7 @@
   <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="UTF-8">
-    <title>Reference</title>
+
     <link href="../style.css" type="text/css" rel="stylesheet" />
     <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
@@ -14,29 +14,33 @@
     <script src="sylvester.js" type="text/javascript"></script>
     <script src="sha1.js" type="text/javascript"></script>
     <script src="PrairieDraw.js" type="text/javascript"></script>
-<script type="text/javascript">
+    
+    <script>
+      $(function(){
+        $("#nav-placeholder").load("../nav.html");
+      });
+    </script>
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-37625161-1']);
-  _gaq.push(['_trackPageview']);
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-37625161-1']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
 
-</script>
+<title>Reference</title>
   </head>
+
   <body>
     <div class="container">
       <div class="header"><h1>Dynamics</h1></div>
       <div id="nav-placeholder"></div>
-	    <script>
-        $(function(){
-          $("#nav-placeholder").load("/nav.html");
-        });
-      </script>
+
       <div class="mainBlock">
     <div class="tocContainer">
     <div class="tocColumn">
