Directory level reference corrections sol and pol

--- a/pol/index.html
+++ b/pol/index.html
@@ -5,20 +5,20 @@
 	<meta charset="UTF-8">
 	<title>TAM 2XX</title>
 
-	<link href="/style.css" type="text/css" rel="stylesheet" />
-	<link href="/icomoon.css" type="text/css" rel="stylesheet" />
+	<link href="../style.css" type="text/css" rel="stylesheet" />
+	<link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
 	<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-	<script src="../../MathJax.js"> type="text/javascript" </script>
-	<script src="../../js/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="../../js/pageControl.js" type="text/javascript"></script>
-	<script src="../../js/sylvester.js" type="text/javascript"></script>
-	<script src="../../js/sha1.js" type="text/javascript"></script>
-	<script src="../../js/PrairieDraw.js" type="text/javascript"></script>
+	<script src="../MathJax.js"> type="text/javascript" </script>
+	<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="../js/pageControl.js" type="text/javascript"></script>
+	<script src="../js/sylvester.js" type="text/javascript"></script>
+	<script src="../js/sha1.js" type="text/javascript"></script>
+	<script src="../js/PrairieDraw.js" type="text/javascript"></script>
 
 	<script>
 		$(function(){
-			$("#nav-placeholder").load("../../nav.html");
+			$("#nav-placeholder").load("../nav.html");
 		});
 	</script>
 </head>
