--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<link href="favicon2.png?" rel="icon" type="image/png" /><meta charset="UTF-8">
 	<title>TAM 2XX</title>
 
-	<link href="/style.css" rel="stylesheet" type="text/css" />
+	<link href="style.css" rel="stylesheet" type="text/css" />
 	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-
+	<script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
+    
 </head>
 <body data-gramm="true" data-gramm_id="a4d99cb0-4883-b08d-5bdd-b1fcf68306bc">
 <div class="container">
@@ -18,7 +18,7 @@
 <div id="nav-placeholder"></div>
 	<script>
 		$(function(){
-			$("#nav-placeholder").load("/nav.html");
+			$("#nav-placeholder").load("nav.html");
 		});
 	</script>
 
