--- a/pol/faq.html
+++ b/pol/faq.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head profile="http://www.w3.org/2005/10/profile">
-		<link rel="icon" type="image/png" href="../../favicon2.png">
+		<link rel="icon" type="image/png" href="../favicon2.png">
 		<meta charset="UTF-8">
 		<title>FAQ</title>
-		<link href="/style.css" type="text/css" rel="stylesheet" />
-		<link href="/icomoon.css" type="text/css" rel="stylesheet" />
+		<link href="../style.css" type="text/css" rel="stylesheet" />
+		<link href="../icomoon.css" type="text/css" rel="stylesheet" />
 		
 		<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-		<!-- <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
-		<!-- <script type="text/x-mathjax-config;executed=true">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script> -->
 		<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-		<script src="../../js/jquery-1.7.2.min.js" type="text/javascript"></script>
-		<script src="../../js/pageControl.js" type="text/javascript"></script>
-		<script src="../../js/sylvester.js" type="text/javascript"></script>
-		<script src="../../js/sha1.js" type="text/javascript"></script>
-		<script src="../../js/PrairieDraw.js" type="text/javascript"></script>
+		<script src="../js/jquery-1.7.2.min.js" type="text/javascript"></script>
+		<script src="../js/pageControl.js" type="text/javascript"></script>
+		<script src="../js/sylvester.js" type="text/javascript"></script>
+		<script src="../js/sha1.js" type="text/javascript"></script>
+		<script src="../js/PrairieDraw.js" type="text/javascript"></script>
+		
+		<script>
+			$(function(){
+				$("#nav-placeholder").load("../nav.html");
+			});
+		</script>
 	</head>
 
 <body>
 <div class="container">
 <div class="header"><h1>TAM 2XX</h1></div>
-
 <div id="nav-placeholder"></div>
-		<script>
-			$(function(){
-				$("#nav-placeholder").load("/nav.html");
-			});
-		</script>
 
 <div class="mainBlock">
 <div class="mainPage">
