--- a/sol/ref.html
+++ b/sol/ref.html
@@ -3,17 +3,18 @@
 <head profile="http://www.w3.org/2005/10/profile">
 	<link href="favicon2.png?" rel="icon" type="image/png" />
 	<meta charset="UTF-8">
-	<title>Solid Mechanics</title>
 
-	<link href="/style.css" rel="stylesheet" type="text/css" />
+	<link href="../style.css" rel="stylesheet" type="text/css" />
 	
-	<script src="../../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
 
 	<script>
-			$(function(){
-				$("#nav-placeholder").load("../../nav.html");
-			});
-		</script>
+		$(function(){
+			$("#nav-placeholder").load("../nav.html");
+		});
+	</script>
+	
+	<title>Solid Mechanics</title>
 </head>
 
 <body>
