--- a/sol/transformation.html
+++ b/sol/transformation.html
@@ -3,34 +3,34 @@
 <head profile="http://www.w3.org/2005/10/profile">
   <link rel="icon" type="image/png" href="favicon2.png">
   <meta charset="UTF-8">
-  <title>Stress Transformation</title>
 
-  <link href="../../style.css" type="text/css" rel="stylesheet" />
-  <link href="../../icomoon.css" type="text/css" rel="stylesheet" />
+  <link href="../style.css" type="text/css" rel="stylesheet" />
+  <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
   <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-  <script src="../../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type="text/javascript" </script>
+  <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type="text/javascript" </script>
 
-  <script src="../../js/jquery-2.1.4.min.js" type="text/javascript"></script>
-  <script src="../../js/pageControl.js" type="text/javascript"></script>
-  <script src="../../js/sylvester.js" type="text/javascript"></script>
-  <script src="../../js/sha1.js" type="text/javascript"></script>
-  <script src="../../js/PrairieDraw.js" type="text/javascript"></script>
+  <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="../js/pageControl.js" type="text/javascript"></script>
+  <script src="../js/sylvester.js" type="text/javascript"></script>
+  <script src="../js/sha1.js" type="text/javascript"></script>
+  <script src="../js/PrairieDraw.js" type="text/javascript"></script>
 
   <script>
     $(function(){
-    $("#nav-placeholder").load("../../nav.html");
+    $("#nav-placeholder").load("../nav.html");
     });
   </script>
 
   <!-- Scripts for this page only: -->
-  <script src="../../js/underscore-min.js"></script>
-  <script src="../../js/backbone-min.js"></script>
-  <script src="../../js/rivets.bundled.min.js"></script>
-  <script src="../../js/numeric-1.2.6.min.js"></script>
-  <script src="../../js/PrairieGeom.js"></script>
+  <script src="../js/underscore-min.js"></script>
+  <script src="../js/backbone-min.js"></script>
+  <script src="../js/rivets.bundled.min.js"></script>
+  <script src="../js/numeric-1.2.6.min.js"></script>
+  <script src="../js/PrairieGeom.js"></script>
   <script src="stateOfStress.js" type="text/javascript"></script>
   <script src="beam.js" type="text/javascript"></script>
+  <title>Stress Transformation</title>
 </head>
 
 <body>
