--- a/sta/ref.html
+++ b/sta/ref.html
@@ -2,25 +2,23 @@
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
 	<link href="favicon2.png?" rel="icon" type="image/png" /><meta charset="UTF-8">
-	<title>Statics</title>
 
-	<link href="/style.css" rel="stylesheet" type="text/css" />
+	<link href="../style.css" rel="stylesheet" type="text/css" />
 	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+	<script src="../js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script>
+		$(function(){
+			$("#nav-placeholder").load("../nav.html");
+		});
+	</script>
+	
+	<title>Statics</title>
 </head>
 
 <body>
 	<div class="container">
-		<div class="header">
-			<h1>TAM 210/211: Statics</h1>
-		</div>
-
+		<div class="header"><h1>Statics</h1></div>
 		<div id="nav-placeholder"></div>
-		<script>
-			$(function(){
-				$("#nav-placeholder").load("/nav.html");
-			});
-		</script>
 
 		<div class="mainBlock">
 			<div class="mainPage">
