Small dyn fixes and nav bar placeholder added

--- a/nav.html
+++ b/nav.html
@@ -33,7 +33,7 @@
 								<li><a href="/dyn/rke.html">Elementary motions</a></li>
 								<li><a href="/dyn/rkm.html">Coordinate system comparison</a></li>
 								<li><a href="/dyn/rkg.html">Rigid bodies</a></li>
-								<li><a href="#">Constraints and constrained motion</a></li>
+								<li><a href="/dyn/rkc.html">Constraints and constrained motion</a></li>
 								<li><a href="/dyn/rko.html">Rolling motion</a></li>
 								<li><a href="#">Relative motion and frames</a></li>
 							</ul>
