--- a/dyn/ref.html
+++ b/dyn/ref.html
@@ -64,7 +64,7 @@
           <li><a href="rke.html">Elementary motions</a></li>
           <li><a href="rkm.html">Coordinate system comparison</a></li>
           <li><a href="rkg.html">Rigid bodies</a></li>
-          <li>Constraints and constrained motion</li>
+          <li><a href="rkc.html">Constraints and constrained motion</a></li>
           <li><a href="rko.html">Rolling motion</a></li>
           <li>Relative motion and frames</li>
         </ol>
