Statics topics setup

--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,19 @@
 			<li><a href="/sta/ref.html" id="navStaRef">Statics References</a>
 			<!-- First tier drop down-->
 			<ul>
-				<li><a href="#">First Topic</a></li>
+				<li><a href="/dyn/rvv.html">Vectors and bases</a></li>
+				<li><a href="/dyn/rvi.html">Vector identities</a></li>
+				<li><a href="/dyn/rvp.html">Positions and coordinates</a></li>
+				<li><a href="/dyn/rvn.html">Notation</a></li>
+				<li><a href="#">Free body diagrams</a></li>
+				<li><a href="/dyn/rep.html">Kinetics of point masses</a></li>
+				<li><a href="/dyn/reg.html">Kinetics of rigid bodies</a></li>
+				<li><a href="#">Structural analysis</a></li>
+				<li><a href="/sol/signConvention.html" id="navSolRef">Internal Loading</a></li>
+				<li><a href="/dyn/rfr.html">Friction and damping</a></li>
+				<li><a href="/dyn/rem.html">Moments of inertia</a></li>
+				<li><a href="#">Hydrostatic fluid pressure</a></li>
+				<li><a href="#">Virtual work</a></li>
 			</ul>
 			<span class="arrow">&#43;</span>
 			</li>
