Updated collab page

--- a/pol/collab.html
+++ b/pol/collab.html
@@ -31,7 +31,9 @@
 <div class="mainPage">
 <div class="mainContent">
 
-<p>This page will contain information on the research done with the TAM 2XX courses to improve collaborative learning.</p>
+<p>The TAM 2XX staff has worked on engineering education research with the <a target="_blank" href="https://www.colearnlab.org/" >Collaborative Learning Laboratory</a> in the Department of Education. This project is called Collaborative Support Tools for Engineering Problem Solving (CSTEPS).</p>
+
+<p>As Teaching and Course Assistants, we try to encourage a collaborative environment using the principle of this  <a target="_blank" href="/pol/CollabTeachingSequence.pdf">teaching sequence.</a></p>
 
 </div>
 
