SIIP outline generated using screenshots and reference paper pdfs

--- a/pol/siip.html
+++ b/pol/siip.html
@@ -34,6 +34,21 @@
 <div class="mainContent">
 
 <p>This page will contain information about how we work to improve the TAM 2XX courses.</p>
+
+
+<p align="center">  <img src="studentLearningOutcomes.PNG" width="750px"></img></p>
+<p align="center">  <img src="assessmentOfLearning.PNG" width="750px"></img></p>
+<p align="center">  <img src="activeAndCollabLearning.PNG" width="750px"></img></p>
+<p align="center">  <img src="blendedLearning.PNG" width="750px"></img></p>
+<p align="center">  <img src="referencePage.PNG" width="750px"></img></p>
+<p align="center">  <img src="onlineHomework.PNG" width="750px"></img></p>
+<p align="center">  <img src="quizRetries.PNG" width="750px"></img></p>
+
+
+
+<p><a href="EsWeEtAl2016.pdf">Ref 1</a>, <a href="SaWeHe2016.pdf">Ref 2</a>, <a href="WeSiHe2015b.pdf">Ref 3</a></p>
+
+
 </div>
 </div>
 </div>
