Small updates and fixes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 <div class="mainBlock">
 <div class="mainPage">
 <div class="mainContent">
-<p>Welcome! This is the official reference book for TAM 212 and 251 at UIUC.</p>
+<p>Welcome! These are the official reference books for TAM 210/211, 212, and 251 at UIUC.</p>
+
+<p>Information and resources common to all courses are listed under <a href="pol/index.html">TAM 2XX</a>.</p>
 
 </div>
 </div>
