Remove lingering Mathjax cdn usage, update to jquery 2.1.4, rename SIIP

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head profile="http://www.w3.org/2005/10/profile">
-	<link href="favicon2.png?" rel="icon" type="image/png" /><meta charset="UTF-8">
-	<title>TAM 2XX</title>
-
+	<link href="favicon2.png?" rel="icon" type="image/png" />
+	<meta charset="UTF-8">
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	
-	<script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
     
+	<title>TAM 2XX</title>
 </head>
+
 <body data-gramm="true" data-gramm_id="a4d99cb0-4883-b08d-5bdd-b1fcf68306bc">
 <div class="container">
 <div class="header">
