--- a/nav.html
+++ b/nav.html
@@ -142,7 +142,7 @@
 				<!-- First tier drop down-->
 				<ul>
 					<li><a href="/pol/policies.html">2XX Policies</a></li>
-					<li><a href="/pol/siip.html">SIIP Committee</a></li>
+					<li><a href="/pol/siip.html">TAM 2XX Reform</a></li>
 					<li><a href="/pol/collab.html">Collaborative Learning</a></li>
 					<li><a href="/pol/faq.html">FAQ</a></li>
 					<li><a href="/pol/pltips.html">PrarieLearn Tips</a>
