--- a/pol/index.html
+++ b/pol/index.html
@@ -37,7 +37,7 @@
 <p><strong>Information:</strong></p>
 <ul>
 	<li><a href="policies.html">2XX Policies</a></li>
-	<li><a href="siip.html">SIIP Committee</a></li>
+	<li><a href="siip.html">TAM 2XX Reform</a></li>
 	<li><a href="collab.html">Collaborative and Active Learning</a></li>
 	<li><a href="faq.html">FAQ</a></li>
 </ul>
