--- a/pol/collab.html
+++ b/pol/collab.html
@@ -8,8 +8,8 @@
 		<link href="../icomoon.css" type="text/css" rel="stylesheet" />
 		
 		<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-		<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-		<script src="../js/jquery-1.7.2.min.js" type="text/javascript"></script>
+		<script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+		<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
 		<!-- page control: generic collapse boxes and stuff -->
 		<script src="../js/pageControl.js" type="text/javascript"></script> 
 		<!-- web tool: vectors and matrix in JS -->
