--- a/pol/pltips.html
+++ b/pol/pltips.html
@@ -7,11 +7,9 @@
 	<link href="../style.css" type="text/css" rel="stylesheet" />
 	<link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
-	<script
-		type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-	<script type="text/javascript" async=""
-		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-	<script src="../js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+	<script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+	<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../js/pageControl.js" type="text/javascript"></script>
 	<script src="../js/sylvester.js" type="text/javascript"></script>
 	<script src="../js/sha1.js" type="text/javascript"></script>
