--- a/pol/policies.html
+++ b/pol/policies.html
@@ -4,33 +4,29 @@
 <head profile="http://www.w3.org/2005/10/profile">
 	<link rel="icon" type="image/png" href="../favicon2.png">
 	<meta charset="UTF-8">
-	<title>SIIP</title>
 	<link href="../style.css" type="text/css" rel="stylesheet" />
 	<link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
-	<script
-		type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-	<script
-		src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+	<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+	<script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
 	<script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../js/sylvester.js" type="text/javascript"></script>
 	<script src="../js/sha1.js" type="text/javascript"></script>
 	<script src="../js/PrairieDraw.js" type="text/javascript"></script>
 	<script src="../js/pageControl.js" type="text/javascript"></script>
+	<script>
+		$(function () {
+			$("#nav-placeholder").load("../nav.html");
+		});
+	</script>
+	
+	<title>Policies</title>
 </head>
 
 <body>
 	<div class="container">
-		<div class="header">
-			<h1>TAM 2XX</h1>
-		</div>
-
+		<div class="header"><h1>TAM 2XX</h1></div>
 		<div id="nav-placeholder"></div>
-		<script>
-			$(function () {
-				$("#nav-placeholder").load("../nav.html");
-			});
-		</script>
 
 		<div class="mainBlock">
 			<div class="contentBlock">
