removed link from excused absences

--- a/pol/policies.html
+++ b/pol/policies.html
@@ -65,9 +65,7 @@
 									concert).</li>
 							</ol>
 						</li>
-						<li>In all cases you must complete the <a
-								href="https://docs.google.com/forms/d/e/1FAIpQLSfxUDQgfAbqyG-ax6Hmw2HsGFafBR-EXMjrNQD1AgH445z-bA/viewform?usp=sf_link">Excused
-								Absence Request Form</a> and upload a scan of the official written documentation
+						<li>In all cases you must complete the Excused Absence Request Form found on your course homepage and upload a scan of the official written documentation
 							explaining your absence.</li>
 						<li>In cases (a) or (b) an official excuse letter from the <a
 								href="http://odos.illinois.edu/community-of-care/student-assistance-center/">Dean on
