--- a/pol/policies.html
+++ b/pol/policies.html
@@ -234,10 +234,10 @@
 
 					<h3><strong><a id="iClickers" name="iClickers">iClickers</a>:</strong></h3>
 
-					<p>Short quizzes are conducted during lectures using iClickers (75% participation, 25% correctness).
+					<p>Short quizzes are conducted during lectures using iClickers.
 						An iClicker remote can be purchased from any of the bookstores, and must be registered on
 						Compass, under the tab &quot;Register i&gt;clicker&quot;. <strong>You need to register your
-							iClicker by the end of Week 2, when the iClicker roster will be synced for the last
+							iClicker by the end of Week 3, when the iClicker roster will be synced for the last
 							time.</strong> The first iClicker use for credit will take place in Week 2 of the semester.
 						Your lowest six scores will be dropped. These drops should be reserved for unexpected
 						occurrences such as sickness or a family emergency.</p>
@@ -273,7 +273,7 @@
 
 					<h3><strong><a id="Discussion" name="Discussion">Discussion sections</a>:</strong></h3>
 
-					<p>Discussion sections start in Week 1 of semester, with the schedule below. Prompt and regular
+					<p>Discussion sections start in Week 1 of semester. Prompt and regular
 						attendance at your discussion section is required. You <strong>must</strong> attend only the
 						discussion section in which you are enrolled. You will not receive a grade for the worksheet if
 						you attend the wrong discussion section.</p>
