--- a/pol/policies.html
+++ b/pol/policies.html
@@ -238,7 +238,7 @@
 						An iClicker remote can be purchased from any of the bookstores, and must be registered on
 						Compass, under the tab &quot;Register i&gt;clicker&quot;. <strong>You need to register your
 							iClicker by the end of Week 3, when the iClicker roster will be synced for the last
-							time.</strong> The first iClicker use for credit will take place in Week 2 of the semester.
+							time.</strong> 
 						Your lowest six scores will be dropped. These drops should be reserved for unexpected
 						occurrences such as sickness or a family emergency.</p>
 
